# aleksander-backtest-engine

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_all.py  schemas.py
.github/workflows/: refresh.yml  run_backtest.yml
data/: fetcher.py
engine/: backtester.py  base_strategy.py  metrics.py
results/: backtest_results.json
strategies/: bollinger_mean_reversion.py  ifvg_cisd.py  macd_bollinger_combo.py  macd_crossover.py  opening_range_breakout.py  overnight_gap_fade.py  rsi_mean_reversion.py  sma_crossover.py  vwap_mean_reversion.py
tests/: conftest.py  test_backtester.py  test_base_strategy.py  test_fetcher.py  test_metrics.py  test_schemas.py  test_strategies.py
